🐛 Fix issue #67: Implemented scrollbar and toggle functionality for theme list (pull #68)
* Fix issue #67: added scroller to theme list

* 🐛 fix: Add event listener to close dropdown when clicking outside; remove onBlur event.

---------

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,3 +25,30 @@ code {
 .major-content {
   min-height: 100vh; /* 100% of the viewport height */
 }
+
+/* a thinner scrollbar for the scrollable theme list on navbar */
+.theme-list-scrollbar::-webkit-scrollbar {
+  width: 1px;
+}
+
+.theme-list-scrollbar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.theme-list-scrollbar::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 1px;
+}
+
+.theme-list-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.theme-list-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
+
+.theme-list-scrollbar::-webkit-scrollbar-corner {
+  display: none;
+}
